chore(ui): fix grey bg on mobile

--- a/ui/src/articles/components/ArticleCard.module.css
+++ b/ui/src/articles/components/ArticleCard.module.css
@@ -79,7 +79,7 @@
 .illustration {
   flex-direction: column;
   display: flex;
-  background: #efefef;
+  background: hsl(0deg 0% 97%);
   height: fit-content;
 }
 
